--- a/web/.env
+++ b/web/.env
@@ -1,6 +1,6 @@
 JWT_SECRET="test"
 JWT_SESSION_TIME=30
 SESSION_TIME = 300
-CDN_HOST = "https://cdn.company.com"
+JWT_HOST = "https://jwt.company.com"
 WEB_HOST = "https://web.company.com"
 REDIS = "localhost"
