File host works well except some weird files names(?)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     image: chaberb/flask-jwt
     volumes:
       - ./cdn:/var/www/app
-      - /tmp:/tmp
+      - ./tmp:/tmp
 
   redis:
     image: redis
