--- a/cdn/.env
+++ b/cdn/.env
@@ -1,6 +1,3 @@
-JWT_SECRET="test"
-JWT_SESSION_TIME=30
+JWT_SECRET="SECRET"
 SESSION_TIME = 300
-JWT_HOST = "https://jwt.company.com"
-WEB_HOST = "https://web.company.com"
 REDIS = "localhost"
